@@ -1,3 +1,7 @@
+Tue Sep 11 2018 Aleksey
+	* CRC32C hash function supported, option --crc32c
+	* speedup CRC32 hash function
+
 Wed Mar 14 2018 Aleksey
 	* === Version 1.3.6 ===
 	* support --file-list option
